# CarDetect

./: .gitignore  CMakeLists.txt  CarDetect.cbp  CarDetect.cpp  ChangesLog.txt  NPRmain.cpp  README  README.md  carcascade_full_14.xml  carcascade_pics_at_tollnaka_12_stages.xml  haardetect.cpp  haardetect.h  hog_vect.cpp  hog_vect.h  ocr_spell_check.h  version.h
data/: CMakeLists.txt  carcascade.xml  carcascade_full_18.xml
include/: globals.h  ocr.h  ocr_spell_check.h
src/: CMakeLists.txt  CarDetect.cpp  NPRMain.cpp  haardetect.cpp
